Fix JPMS issues